fixing aligning of header elements

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,8 +9,6 @@
   text-transform: uppercase;  
 }
 
-
-/*Reused component containers -----------*/
 body {
   margin: 0;
   padding: 0;
@@ -19,7 +17,29 @@ body {
   color: #007bff;
 }
 
+
+/*Reused component containers -----------*/
+header {
+  display: flex;
+  justify-content: right;
+  width: 100%;
+}
+
+.header-container {
+  width: 100%;
+  padding: 4px 20px 0 20px;
+  color:white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1em;
+  font-size: 1em;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+}
+
 .main-container {
+
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -35,13 +55,6 @@ body {
   justify-content: center;
 }
 
-footer {
-  width: 100%;
-  height: auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
 
 /*Reused error message class -----------*/
 .error-message {
@@ -97,7 +110,7 @@ footer {
 
 .back-btn {
   background-color: #007bff;
-  justify-content: flex-start;
+  justify-content: center;
   width: 13em;
   height: 2em;
   display: grid;
@@ -106,7 +119,6 @@ footer {
   text-transform: uppercase;
   cursor: pointer;
   transition: background-color 0.3s, box-shadow 0.3s;
-  margin: 0 0 0 20px;
 }
 
 .back-btn:hover {
@@ -121,18 +133,11 @@ footer {
   left: 0px;
 }
 
-.lang-switcher {
-  color:white;
+.lang-container {
   display: flex;
-  justify-content: space-between;
-  padding: 1em;
-  padding-bottom: 0%;
+  flex-direction: row;
   align-items: center;
   gap: 1em;
-  font-size: 1em;
-  letter-spacing: 0.1rem;
-  text-transform: uppercase;
-  margin: 0 20px 4px 0;
 }
 
 .lang-btn {
@@ -154,12 +159,6 @@ footer {
 
 
 /* StartView -----------*/
-
-header {
-  background-color:#1e1e2f; /*Emil: this class is unnecessary, 
-                                but we still might want to keep it, maybe ask Mikael.*/
-  width: 100%;
-}
 
 .logo {
   letter-spacing: 0.25em;
